--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,8 +302,7 @@ footer.site-footer {
   /* X-Large devices (large desktops, less than 1400px) */
   
   @media (max-width: 1399.98px) {
-    /* ==========================================================================
-=======
+    /* ==========================================================================*/
 }
 
 /* X-Large devices (large desktops, less than 1400px) */
@@ -338,7 +337,7 @@ footer.site-footer {
   /* Large devices (desktops, less than 1200px) */
   
   @media (max-width: 1199.98px) {
-    /* ==========================================================================
+    /* ==========================================================================*/
 }
 
 /* Large devices (desktops, less than 1200px) */
@@ -372,7 +371,7 @@ footer.site-footer {
   /* Medium devices (tablets, less than 992px) */
   
   @media (max-width: 991.98px) {
-    /* ==========================================================================
+    /* ==========================================================================*/
 }
 
 /* Medium devices (tablets, less than 992px) */
@@ -405,7 +404,7 @@ footer.site-footer {
   /* Small devices (landscape phones, less than 768px) */
   
   @media (max-width: 768.98px) {
-    /* ==========================================================================
+    /* ==========================================================================*/
 }
 
 /* Small devices (landscape phones, less than 768px) */
@@ -535,3 +534,4 @@ footer.site-footer {
     width: 20%;
     display: block;
 }
+  }
