--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ form {
 .item {
   display: flex;
 }
-imput {
+input {
   width: 100%;
   border-radius: 15px;
   border-color: var(--grey1);
@@ -113,6 +113,15 @@ main.site-main {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.inputs{
+  width:  45%;
+  padding-left: 2.5%;
+  padding-right: 2.5%;
+  border-radius: 15px;
+  border-color: var(--grey1);
+  margin-top: 20px;
 }
 
 /* ==========================================================================
@@ -423,4 +432,5 @@ footer.site-footer {
 .salva{
     width: 20%;
     display: block;
-}
+    justify-self: center;
+}}
