stilizzata pagina stat

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,12 @@ img.img_profilo{
   width: 5%;
 }
 
+/* STATS */
+
+.graficoGenere, .graficoEta{
+  min-height: 350px;
+}
+
 /* ==========================================================================
    5.0 - Header
    ========================================================================== */
