--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,12 @@ img.img_profilo{
 
 /* STATS */
 
+/* .chart-container{
+  position: relative; 
+  height:40vh; 
+  width:80vw;
+} */
+
 .graficoGenere, .graficoEta{
   min-height: 350px;
 }
