--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,11 @@ body {
   border-radius: 25px;
   padding: 30px;
 }
+
+main{
+  padding-top: 44px;
+}
+
 form {
   width: 100%;
   font-size: 15px;
@@ -113,17 +118,12 @@ main.site-main.site-main-login {
   flex-direction: column;
   align-items: center;
 }
-.site-main.site-main-studenti{
-  padding-top: 210px;
-}
 
 /* ==========================================================================
    5.0 - Header
    ========================================================================== */
 header.site-header {
-  
-  position: fixed;
-  top: 14px;
+  margin: 12px 0 32px;
   width: 100%;
 }
 .container-header {
@@ -472,6 +472,21 @@ footer.site-footer {
   margin-top: 20px;
   background-color: #20B7CA;
   color: white;
+}
+
+.invia-form:hover{
+    background-color: #1c99a9;
+  color: white;
+}
+
+.invia-form.aggiungi-btn{
+  width: 200px;
+}
+
+.invia-form.btn-altro{
+  width: 70px;
+  padding: 0;
+  margin-top: -1px;
 }
 
 .actionBtn, .backBtn{
